src/app/toolbar/toolbar.component.css
.toolbar {
  background: #111111;
  color: rgb(51, 153, 204);
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: flex;
  flex-direction: row;
  padding: 0 25px;
  align-items: center;
  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
  z-index: 99;
  position: fixed;
}

.toolbar i:hover{
  background-color: rgba(255, 255,255, 0.1);
  cursor:pointer;
  border-radius: 50%;
}

.toolbar .header-text {
  width: 100%;
  padding: 0 25px;
  flex-shrink: 1;
  overflow: hidden;
  white-space: nowrap;
}

.toolbar .title {
  white-space: nowrap;
  color: rgb(51, 153, 204);
  font-size: 20px;
  font-weight: 500;
  line-height: 1;
  letter-spacing: 0.02em;
  font-weight: 400;
}
.toolbar .sub-title {
  font-size: small;
}

.toolbar nav.links {
  display: flex;
  flex-direction: row;
}

.toolbar a.link {
  font-size: 16px;
  padding: 15px;
  color: inherit;
  text-decoration: none;
  transition: background 200ms;
  transition: background .2s;
}
.toolbar a.link .hover {
  background-color: rgba(255, 255,255, 0.1);
  transition: background .2s;
}

.material-icons {
  font-weight: normal;
  font-style: normal;
  font-size: 24px;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  display: inline-block;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-feature-settings: 'liga';
  -webkit-font-smoothing: antialiased;
}

